Ignore image previews

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ assets/
 */images/activity/
 */images/thread/
 */images/threadReply/
-*/images/preview/^doc/
+*/images/preview/*/
+!*/images/preview/docs/
